enum class Cell {
    EMPTY, PLAYER_ONE, PLAYER_TWO
}