enum class ColorOfPlayer {
    BLACK, WHITE
}